--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "prettier --write {*.js,**/**/*.js}"
   },
   "dependencies": {
+    "@fontsource/oswald": "^4.2.2",
+    "@fontsource/ranchers": "^4.2.2",
     "@stripe/stripe-js": "^1.13.2",
-    "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "stripe": "^8.139.0"
   },
   "devDependencies": {
