--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@fontsource/ranchers": "^4.2.2",
     "@fontsource/roboto-slab": "^4.2.2",
     "@stripe/stripe-js": "^1.13.2",
+    "framer-motion": "^4.1.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
-    "react-transition-group": "^4.4.1",
     "stripe": "^8.139.0"
   },
   "devDependencies": {
