--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.4"
+    "tailwindcss": "^2.0.4",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
