--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fontsource/ranchers": "^4.2.2",
     "@fontsource/roboto-slab": "^4.2.2",
     "@stripe/stripe-js": "^1.13.2",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4.1.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "10.0.9",
+    "nodemailer": "^6.6.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
     "stripe": "^8.139.0"
   },
