--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
+    "react-loading": "^2.0.3",
     "stripe": "^8.139.0"
   },
   "devDependencies": {
